--- a/src/Components/TabLayout/TabLayout.module.scss
+++ b/src/Components/TabLayout/TabLayout.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 90vw;
+  width: inherit;
   color: black;
   h1 {
     font-size: 1.5rem;
