--- a/src/MainLayout/MainLayout.module.scss
+++ b/src/MainLayout/MainLayout.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 16px;
+  gap: 24px;
   box-sizing: border-box;
-  background-color: rgb(240, 235, 235);
+  background-color: rgb(71, 71, 71);
 }
