--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -6,6 +6,11 @@
   height: 14.5rem;
   width: 100%;
   background-color: rgba(6, 6, 6, 0.601);
+  color: white;
+  h1 {
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
 }
 
 .header {
@@ -20,7 +25,7 @@
   justify-content: center;
 }
 
-.headerText {
+.headerLogo {
   height: 3rem;
 }
 .headerImage {
