--- a/src/Components/TabMenu/TabMenu.module.scss
+++ b/src/Components/TabMenu/TabMenu.module.scss
@@ -1,20 +1,14 @@
-.menuWrapper {
-  width: 90vw;
+.tabsWrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 24px;
 }
 
 .tabsList {
-  width: inherit;
+  width: 100%;
   display: flex;
   justify-content: space-between;
-}
-
-.tabsContent {
-  background-color: rgb(252, 252, 252);
-  border-radius: 4px;
-  padding: 16px;
 }
 
 .trigger {
