attempt 2 fix image import

--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -17,7 +17,7 @@
   height: 8rem;
   margin-top: 16px;
   width: 90%;
-  background-image: url("/assets/theme.png");
+  background-image: url("/theme.png");
   border-radius: 4px;
   background-size: cover;
   display: flex;
