--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
-  height: 14.5rem;
+  height: 13rem;
   width: 100%;
   background-color: rgba(6, 6, 6, 0.601);
   color: white;
@@ -14,7 +13,7 @@
 }
 
 .header {
-  height: 8rem;
+  height: 12rem;
   margin-top: 16px;
   width: 90%;
   background-image: url("/theme.png");
@@ -28,7 +27,17 @@
 .headerLogo {
   height: 3rem;
 }
+
+.imageAndTextContainer {
+  height: 100%;
+  position: relative;
+}
 .headerImage {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
-  top: 7rem;
+  top: -8%;
 }
