--- a/src/Components/TabMenu/TabMenu.module.scss
+++ b/src/Components/TabMenu/TabMenu.module.scss
@@ -12,6 +12,8 @@
 }
 
 .trigger {
-  width: 7.54rem;
+  color: white;
+  max-width: 7.54rem;
   background-color: rgb(31, 31, 31);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
