--- a/src/Components/TabMenu/TabMenu.module.scss
+++ b/src/Components/TabMenu/TabMenu.module.scss
@@ -21,6 +21,9 @@
   justify-content: center;
   color: white;
   background-color: rgb(31, 31, 31);
+  font-size: 1.5rem;
+  font-weight: 500;
+
   &:first-child {
     border-top-left-radius: 8px;
   }
