--- a/src/styles/01-settings/_settings.typography.scss
+++ b/src/styles/01-settings/_settings.typography.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "teko";
-  src: url("../../public/font/Teko-VariableFont_wght.ttf") format("truetype");
+  src: url("/Teko-VariableFont_wght.ttf") format("truetype");
 }
 
 $font-body: "teko", sans-serif;
