--- a/src/styles/02-tools/tools.scss
+++ b/src/styles/02-tools/tools.scss
@@ -1,5 +1,3 @@
-@forward 'tools.card-style';
-@forward 'tools.content-padding';
-@forward 'tools.font-styles';
-@forward 'tools.respond-to';
-@forward 'tools.to-rem';
+@forward "tools.font-styles";
+@forward "tools.respond-to";
+@forward "tools.to-rem";
