--- a/src/MainLayout/MainLayout.module.scss
+++ b/src/MainLayout/MainLayout.module.scss
@@ -1,7 +1,8 @@
 .layout {
   width: 100vw;
   font-family: $font-body;
-  min-height: 100vh;
+  height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
